    fixed bug sometimes causing wrong placement of dynamics in bach.score at the very end of a note
    fixed bug causing possible missing initial tempo in "subscore" command
    fixed wrong filename in MIDI score import help file
    @finitestaff: new attribute to trim staff after last measure
    @showfirstmeasurenumber: new attribute

- bach.roll:
    MIDI import: if both markmeasures and markdivisions are on (as per default), and "bach barline" markers are present in the MIDI file, then measure barlines are not calculated
        New "importdivisions" message attribute, overriding "markdivisions"
        New "importsubdivisions" message attribute
        Staves are now correctly ordered by MIDI channel in format 0
    exportmidi: new "exportbarlines" message attribute
        new "exportdivisions" message attribute
        fixed bug causing data corruption if notes in channel 16 were present
    fixed bug sometimes causing wrong gluechord on notes with breakpoints
    fixed bug with groups
    fixed bug that broke the "sel chord"/"sel note"
    solved crashes while using sampling/interp in bach.roll/score
    fixed bug causing loss of user-defined accidentals during copy-paste
    fixed bug causing wrong breakpoint and temporal slots handling while stretching bach.roll regions via markers

- bach.slot:
    redraw is refreshed when changing scrollbar
    fixed bug causing crashes with writetxt in bach.slot
    added support for noteheadinfo and articulationinfo to bach.slot

- bach.quantize:
    fixed bug causing crashes when quantizing an empty score with @sync 1
    fixed bug causing weird rests when dealing with pickup measures with bach.quantize

- bach.playkeys:
    now bach.playkeys is able to recognize if slots are given by names, and if so dynamics/articulations/etc. 
    defaults are adapted accordingly
    added @voicefilter attribute to filter specific voices